--- a/app/scss/layout/_navbar.scss
+++ b/app/scss/layout/_navbar.scss
@@ -36,8 +36,6 @@ body {
 }
 
  .menu {
-
-
 	display: flex;
 	border-left: 5px solid $color-accent;
 	border-bottom: 5px solid $color-accent;
@@ -47,14 +45,18 @@ body {
 	right: 0;
 	position: absolute;
 	flex-direction: column;
-	flex-wrap: wrap;
-	padding: 2rem;
+	flex-wrap: no-wrap;
+	padding: 1rem;
 	height: 80vh;
 	width: 80vw;
 	justify-content: space-around;
 	align-items: center;
 	transition: transform 1s ease-in;
 	background-color: $color-main;
+
+	@media(min-width:30rem){
+		flex-wrap: wrap;
+	}
 
 	@media(min-width: 30rem) and (min-height: 30rem) {
 		justify-content: space-between;
@@ -73,7 +75,7 @@ body {
 
 	&__item{
 		max-width: 15rem;
-		font-size: 2rem;
+		font-size: 1.5rem;
 		opacity: 0;
 		background-color: $color-main;
 		text-align: center;
